--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,5 +43,7 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.1.0'
     annotationProcessor 'androidx.room:room-compiler:2.1.0'
     implementation "androidx.work:work-runtime:2.1.0"
+    implementation 'com.danikula:videocache:2.7.1'
+
 
 }
